[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "runps"
version = "4.0.4"

description = "A small python utility for launching external processes easily.."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.txt" }

authors = [
  { name = "Andrew Moffat" },
  { name = "Lucas Sinclair" }
]

[project.urls]
Homepage = "https://github.com/xapple/runps/"