[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "runps"
version = "4.1.0"

description = "A cross-platform python utility for launching external processes easily."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"

dependencies = [
  "sh; sys_platform != 'win32'",
]

authors = [
  { name = "Andrew Moffat" },
  { name = "Lucas Sinclair" }
]

[project.urls]
Homepage = "https://github.com/xapple/runps/"